Add second text

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             Why
             Did we lose what it meant?
             And what was the consequence?</p>
+          <p>neowa gateun haneuraraee
+            sumswineun mae sungani nan
+            joha sarangiran daneoron
+            chungbunhajiga anha
+            i areumdaun neukkim</p>
       </div>
     </body>
 </html>
