--- a/index.html
+++ b/index.html
@@ -2,35 +2,45 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="scss/style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Gamja+Flower" rel="stylesheet">
     </head>   
-    <body>
-      <div>
+    <body class="container">
+      <header class="author text-center">
         <h1>Medalyon</h1>
         <h3>"Why"</h3>
-        <p>So I try to retrace
-            A memory of her face
-            Every day that goes by
-            Still makes me wonder why
-            
-            Why
-            Doesn't it make sense?
-            Why
-            Did we lose what it meant?
-            And what was the consequence?</p>
-          <p>neowa gateun haneuraraee
-            sumswineun mae sungani nan
-            joha sarangiran daneoron
-            chungbunhajiga anha
-            i areumdaun neukkim</p>
-          <p>It’s beautiful
-            It’s beautiful
-            This beautiful feeling
-            i areumdaun neukkim
-            It’s beautiful
-            It’s beautiful
-            mallo da hal su eopseo
-            i areumdaun neukkim</p>
-      </div>
+      </header>
+        <div class="row verses">
+            <div class="col-md-4 col-sm-6 col-xs-12 v1">
+              <p>So I try to retrace
+                 A memory of her face
+                 Every day that goes by
+                 Still makes me wonder why
+                 
+                 Why
+                 Doesn't it make sense?
+                 Why
+                 Did we lose what it meant?
+                 And what was the consequence?</p>
+             </div>
+             <div class="col-md-4 col-sm-6 col-xs-12 v2">
+                <p>neowa gateun haneuraraee
+                  sumswineun mae sungani nan
+                  joha sarangiran daneoron
+                  chungbunhajiga anha
+                  i areumdaun neukkim</p>
+              </div>
+              <div class="col-md-4 col-sm-12 col-xs-12 v1">
+                <p>It’s beautiful
+                  It’s beautiful
+                  This beautiful feeling
+                  i areumdaun neukkim
+                  It’s beautiful
+                  It’s beautiful
+                  mallo da hal su eopseo
+                  i areumdaun neukkim</p>
+              </div>
+        </div>
     </body>
 </html>
